# ocr-meter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENCE  Makefile  cmake_install.cmake  loop.sh  ocr.sh  ocrJohn  ocrSaintMichel1
insert_cassandra/: insertCassandra.sh  main.cpp
john/: test.cpp
ocr/: loop.sh  ocr.sh  ocrJohn  ocrSaintMichel1
ocr/john/: analysis.ods  meter2.traineddata
ocr/saintmichel/: analysis_ocrSaintMichel1.ods  liquidcrystal.traineddata  ocrSaintMichel1.cpp
saintmichel/: liquidcrystal.traineddata  ocrSaintMichel1.cpp
